contextPath: egov 수정 및 페이지 띄움

--- a/src/main/resources/egovframework/egovProps/globals.properties
+++ b/src/main/resources/egovframework/egovProps/globals.properties
@@ -35,46 +35,14 @@ Globals.MainPage  = /EgovContent.do
 # Globals.mysql.Password = com01 \ucc98\ub7fc \ud3c9\ubb38\uc744 \uc0ac\uc6a9\ud558\ub824\uba74 context-crypto.xml \uc5d0\uc11c initial="false" crypto="false" \ub85c \uc124\uc815\ud558\uace0, 
 # context-datasource.xml \uc5d0\uc11c <property name="password" value="${Globals.mysql.Password}"/> \ub85c \ubc14\uafb8\uc5b4 \uc8fc\uc5b4\uc57c \ud568
 #mysql
-Globals.mysql.DriverClassName=net.sf.log4jdbc.DriverSpy
-Globals.mysql.Url=jdbc:log4jdbc:mysql://127.0.0.1:3306/com
-Globals.mysql.UserName = com
-Globals.mysql.Password = xz4fmrSdr1vGGl6UtwPLwA%3D%3D
-
-#oracle
-Globals.oracle.DriverClassName=oracle.jdbc.driver.OracleDriver
-Globals.oracle.Url=jdbc:oracle:thin:@127.0.0.1:1521:orcl
-Globals.oracle.UserName = com
-Globals.oracle.Password = xz4fmrSdr1vGGl6UtwPLwA%3D%3D
-
-#altibase
-Globals.altibase.DriverClassName=Altibase.jdbc.driver.AltibaseDriver
-Globals.altibase.Url=jdbc:Altibase://127.0.0.1:20300/mydb?encoding=UTF-8
-Globals.altibase.UserName = com
-Globals.altibase.Password = xz4fmrSdr1vGGl6UtwPLwA%3D%3D
-
-#tibero
-Globals.tibero.DriverClassName=com.tmax.tibero.jdbc.TbDriver
-Globals.tibero.Url=jdbc:tibero:thin:@127.0.0.1:8629:tibero
-Globals.tibero.UserName = com
-Globals.tibero.Password = xz4fmrSdr1vGGl6UtwPLwA%3D%3D
-
-#cubrid
-Globals.cubrid.DriverClassName=cubrid.jdbc.driver.CUBRIDDriver
-Globals.cubrid.Url=jdbc:cubrid:127.0.0.1:30000:com:::?charset=utf-8
-Globals.cubrid.UserName = com
-Globals.cubrid.Password = xz4fmrSdr1vGGl6UtwPLwA%3D%3D
-
-#MariaDB
-Globals.maria.DriverClassName=org.mariadb.jdbc.Driver
-Globals.maria.Url=jdbc:mariadb://127.0.0.1:3336/com
-Globals.maria.UserName = com
-Globals.maria.Password = xz4fmrSdr1vGGl6UtwPLwA%3D%3D
-
-#postgreSQL
-Globals.postgres.DriverClassName=org.postgresql.Driver
-Globals.postgres.Url=jdbc:postgresql://127.0.0.1:5432/comdb
-Globals.postgres.UserName=com
-Globals.postgres.Password=xz4fmrSdr1vGGl6UtwPLwA%3D%3D
+Globals.mysql.DriverClassName=com.mysql.cj.jdbc.Driver
+Globals.mysql.Url=jdbc:mysql://127.0.0.1:3306/shock_data?characterEncoding=utf8&allowPublicKeyRetrieval=true&useSSL=false&allowMultiQueries=true
+Globals.mysql.UserName=shock_user
+Globals.mysql.Password=alstjrdl22#
+#Globals.mysql.DriverClassName=com.mysql.cj.jdbc.Driver
+#Globals.mysql.Url=jdbc:mysql://127.0.0.1:3306/shock_data?characterEncoding=utf8
+#Globals.mysql.UserName = shock_user
+#Globals.mysql.Password = alstjrdl22#
 
 # \ub85c\uadf8\uc778 \uc778\uc99d \uc81c\ud55c(login authentication limit)
 # (\uc0ac\uc6a9 \uc5ec\ubd80 \uc124\uc815\uac12 : true, false)
