--- a/pom.xml
+++ b/pom.xml
@@ -479,63 +479,10 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.31</version>
+            <version>8.0.24</version>
         </dependency>
         
-		<dependency>
-		    <groupId>org.mariadb.jdbc</groupId>
-		    <artifactId>mariadb-java-client</artifactId>
-		    <version>2.2.5</version>
-		</dependency>
 		
-		
-		<dependency>
-		     <groupId>org.postgresql</groupId>
-		     <artifactId>postgresql</artifactId>
-		     <version>9.4.1208</version>
-		</dependency>
-		
-        <!-- 3rd party 라이브러리로 별도의 설치 필요 -->
-        <!-- oracle 11g driver -->
-        <!-- 
-        <dependency>
-            <groupId>ojdbc</groupId>
-            <artifactId>ojdbc</artifactId>
-            <version>6-11</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/ojdbc6-11.2.0.3.jar</systemPath>
-        </dependency>
-        -->
-        <!-- altibase driver -->
-        <!--
-        <dependency>
-            <groupId>altibase</groupId>
-            <artifactId>altibase-jdbc-driver</artifactId>
-            <version>5.1.3.18</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/Altibase.jar</systemPath>
-        </dependency>
-		-->
-        <!-- tibero driver -->
-        <!--
-        <dependency>
-            <groupId>com.tmax.tibero</groupId>
-            <artifactId>tibero-jdbc</artifactId>
-            <version>3.0</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/tibero5-jdbc.jar</systemPath>
-        </dependency>
- 		-->
-        <!-- cubrid driver -->
-        <!-- 
-        <dependency>
-            <groupId>cubrid</groupId>
-            <artifactId>cubrid-jdbc</artifactId>
-            <version>8.4</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/cubrid_jdbc.jar</systemPath>
-        </dependency>
- 		-->
         <!--  M-Gov (SMS Service API) -->
         <dependency>
             <groupId>kr.go.mgov</groupId>
@@ -567,7 +514,7 @@
     <build>
         <defaultGoal>install</defaultGoal>
         <directory>${basedir}/target</directory>
-        <finalName>egovframework-all-in-one</finalName>
+        <finalName>egov</finalName>
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -653,7 +600,7 @@
                     <username>tomcat</username>
                     <password>tomcat</password>
                     <path>/</path>
-                    <warFile>target\egovframework-all-in-one.war</warFile>
+                    <warFile>target\egov.war</warFile>
                     <update>true</update>
                 </configuration>
             </plugin>
