--- a/src/main/resources/egovframework/egovProps/globals.properties
+++ b/src/main/resources/egovframework/egovProps/globals.properties
@@ -36,9 +36,9 @@ Globals.MainPage  = /EgovContent.do
 # context-datasource.xml \uc5d0\uc11c <property name="password" value="${Globals.mysql.Password}"/> \ub85c \ubc14\uafb8\uc5b4 \uc8fc\uc5b4\uc57c \ud568
 #mysql
 Globals.mysql.DriverClassName=com.mysql.cj.jdbc.Driver
-Globals.mysql.Url=jdbc:mysql://127.0.0.1:3306/shock_data?characterEncoding=utf8&allowPublicKeyRetrieval=true&useSSL=false&allowMultiQueries=true
-Globals.mysql.UserName=shock_user
-Globals.mysql.Password=alstjrdl22#
+Globals.mysql.Url=jdbc:mysql://127.0.0.1:3306/shock_egov_db?characterEncoding=utf8&allowPublicKeyRetrieval=true&useSSL=false
+Globals.mysql.UserName=shock_egov_user
+Globals.mysql.Password=1205cnlcla@@
 #Globals.mysql.DriverClassName=com.mysql.cj.jdbc.Driver
 #Globals.mysql.Url=jdbc:mysql://127.0.0.1:3306/shock_data?characterEncoding=utf8
 #Globals.mysql.UserName = shock_user
